WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208841
REGRESSION (257846) Crash on maps.google.com under Element::isVisibleWithoutResolvingFullStyle
https://bugs.webkit.org/show_bug.cgi?id=208841
Summary
REGRESSION (257846) Crash on maps.google.com under Element::isVisibleWithoutR...
alan
Reported
2020-03-09 16:12:12 PDT
<
rdar://problem/60238539
>
Attachments
Patch
(1.64 KB, patch)
2020-03-09 16:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-03-09 16:17:20 PDT
Created
attachment 393088
[details]
Patch
WebKit Commit Bot
Comment 2
2020-03-09 16:36:28 PDT
Comment on
attachment 393088
[details]
Patch Clearing flags on attachment: 393088 Committed
r258172
: <
https://trac.webkit.org/changeset/258172
>
WebKit Commit Bot
Comment 3
2020-03-09 16:36:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-03-09 16:37:18 PDT
<
rdar://problem/60249398
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug