REGRESSION (257846) Crash on maps.google.com under Element::isVisibleWithoutResolvingFullStyle https://bugs.webkit.org/show_bug.cgi?id=208841 <rdar://problem/60238539>

Reviewed by Simon Fraser.

Resolve the computed style for the composed ancestors when not available.

* dom/Element.cpp:
(WebCore::Element::isVisibleWithoutResolvingFullStyle const):


Canonical link: https://commits.webkit.org/221767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258172 268f45cc-cd09-0410-ab3c-d52691b4dbfc